
  * [cmdline] When simulating do not prompt for removal of essential packages
    (Closes: #613049)

  * [cmdline] When simulating, add notice before confirmation to continue
    actions (Closes: #173277)

  * [cmdline] For "search", use candidate or, if does not exist, current version
    rather than a random version to show information about the package
    (Closes: #490593)

- User visible changes:

  * [cmdline] Minor improvements to help (Closes: #497136)

  * [curses] Show Origin and URI in pkg info screen
    (Closes: #294040, #457794, #513622, #611515)

  * Print useful message when package lists are out of date (Closes: #758764)

  * [curses] Allow to hide bottom half in several screens (Closes: #453853)

  * [cmdline] Hide Show-Why reasons when the string is empty (Closes: #576584)

  * [curses] Show hostname on header line (Closes: #398101)

- Internal changes:

  * Change APT::Changelogs::Server (src/apt_options.cc) from
    http://packages.debian.org/changelogs to
    http://metadata.ftp-master.debian.org/changelogs -- it is the default for a
    few years already.

  * Add function to get the URI of a package version

  * Add function to get the Origin of a package version

  * Add function to get the candidate version of a package

- Documentation:

  * manpage:

    * Separate two elements in --add-user-tag-to description with comma, they
      were displayed together


[2015-10-16]
Version 0.7.4

- New features:

  * [curses] Show providers of virtual packages in "description" area
    (Closes: #103964)

    The description area (bottom half of the screen in the default view) was
    completely empty for virtual packages.  Now it shows the list of "real"
    packages providing the virtual package, in a nicely formatted list.

- Bug fixes:

  * Retrieve again long descriptions (Closes: #801460)

    When disabling the #ifdef of HAVE_DDTP, it was done the wrong way around and
    the old code (untested for many years) compiled fine and didn't cause